configure build and start scripts

--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "buildpokedex_project",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "npx tsc",
+    "start": "node dist/main.js",
+    "dev": "npx tsc && node dist/main.js"
   },
   "keywords": [],
   "author": "",
